--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,9 @@
+<div style="margin-left: 200px; position: relative;">
 <div style="text-align:center;">
         <h4 id="copy" style="text-align:center; font-family: 'Work Sans', sans-serif;" >
         	&copy; 2017 Web Mechanics. All Rights Reserved.<br><br>
         	<a href="/contact_form" target="_blank"><i class="fa fa-phone"></i> CONTACT US</a>
         </h4>
+</div>
 </div>
 
