--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,6 +5,36 @@
     %>
 </div>
 
+<style>
+.sidenavi {
+    height: 100%;
+    width: 200px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    padding-top: 20px;
+}
+
+.sidenavi a {
+    padding: 6px 6px 6px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+}
+
+.sidenavi a:hover {
+    color: #f1f1f1;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenavi {padding-top: 15px;}
+  .sidenavi a {font-size: 18px;}
+}
+</style>
 <div style="background: url('bg.jpg'); padding-bottom: 30px;">
 
 <% if logged_in? %>
@@ -41,7 +71,7 @@
 
 						</div>
 												
-										<% else %>
+										<% else %><div class="main-with-nav">
 										
 					<figure class="effect-jazz jazz1">
 		<img src="<%= user.image %>" style="padding: 5px; background: -moz-radial-gradient(50% 50%, #fff, #fff);background: -webkit-radial-gradient(50% 50%, #fff, #fff); background: -o-radial-gradient(50% 50%, #fff, #fff); background: -ms-radial-gradient(50% 50%, #fff, #fff); background: radial-gradient(50% 50%, #fff, #fff)" />
@@ -79,14 +109,37 @@
 		</div>
 		</div>
 		<% else %>
-		
 		<!--teacher-->
 		<!--teacher-->
 		<!--teacher-->
+			<div class="sidenavi">
+			  <a href="#">About</a>
+			  <a href="#">Services</a>
+			  <a href="#">Clients</a>
+			  <a href="#">Contact</a>
+			</div>
 		<p>
-		Thankn you every day!!
-		We will always treat you well.
+		<br/>
+		<div class="container" style="padding:0 3% 0 3%; margin-left: 200px; position: relative;">
+		<div class ="row">
+			<div class = "col-sm-6"><p>
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi leo, tincidunt vel malesuada et, auctor eu est. Vivamus dapibus efficitur efficitur. Integer tempus consequat bibendum. Nam suscipit, augue in convallis blandit, odio metus sagittis neque, vel aliquet tellus neque accumsan libero. Pellentesque id consequat diam, ut tempus purus. Nam erat nisl, commodo interdum convallis at, tincidunt id justo. Vestibulum rhoncus vitae urna ac euismod. Sed sit amet pellentesque ipsum, nec pulvinar nisl. Duis tortor arcu, auctor nec felis vitae, cursus congue magna. Suspendisse a est viverra, semper tortor eu, luctus nisl.</p>
+
+		<p>Mauris ornare finibus lacus in posuere. Integer in elit in ligula consequat laoreet. Vestibulum cursus sagittis est ac accumsan. Praesent at justo aliquet, vulputate sem nec, dapibus mi. Morbi augue risus, ullamcorper a fringilla dignissim, sagittis ut diam. Nullam mollis erat eu enim bibendum molestie. Fusce ut tincidunt odio. Nam venenatis aliquam nunc, non fermentum eros tempus vehicula.
+
+		Nunc a placerat sem. Aenean euismod congue sem, et rutrum ante mollis et. Nunc luctus justo sit amet elit sollicitudin, vitae imperdiet nisl sodales. Aliquam commodo sapien id interdum feugiat. Sed eget maximus lorem. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Fusce bibendum, erat ut laoreet convallis, turpis velit euismod turpis, nec dignissim ligula nisl nec sapien. In hac habitasse platea dictumst. In non tellus non nulla lacinia sollicitudin.</p>
+		</div>
+
+		<div class = "col-sm-6"><p>
+		Mauris laoreet ipsum velit, vel accumsan urna convallis vel. Curabitur aliquam eros sed libero scelerisque, at varius augue iaculis. Etiam aliquam ac tellus ut fringilla. Aliquam porta orci ac nunc ullamcorper gravida. Duis hendrerit rhoncus quam eu aliquam. Vivamus ut eleifend augue, scelerisque faucibus lacus. Nulla cursus leo quam. Suspendisse ultricies eros in pretium hendrerit. Nunc feugiat dolor lacus. Vivamus in maximus ante, ac elementum odio. Proin dictum gravida dui. Donec aliquet orci vitae orci dapibus viverra. Proin ultricies ligula eu metus dictum venenatis. Pellentesque rhoncus tortor ultricies ex iaculis malesuada. Suspendisse dignissim tortor elementum lacinia bibendum. Vivamus a quam at arcu commodo facilisis eu eget orci.</p>
+
+		<p>Fusce hendrerit ut mi suscipit condimentum. Sed ipsum massa, molestie vitae semper id, fermentum at ligula. Nunc quis tortor laoreet, bibendum ligula sed, pretium felis. Sed ut elit nibh. Nunc aliquam metus vel gravida ultricies. Mauris vel pellentesque lorem. Suspendisse neque nulla, elementum eget ultricies iaculis, gravida ac augue. Sed massa odio, finibus at massa at, molestie sodales dui. Pellentesque posuere id ipsum vitae sollicitudin. Phasellus ac eleifend est, eu semper sem.</p>
+
+		<p>Nullam scelerisque ex in ligula auctor, at pretium libero varius. Nunc sed mi in ex imperdiet lacinia in facilisis eros. Donec vitae libero sed odio luctus semper. Quisque eu leo venenatis, tempus velit id, convallis sapien. Fusce sagittis rutrum tortor egestas molestie. Maecenas quis sollicitudin dolor. Nam vel nulla vel justo euismod aliquet ac eget libero. Nunc non pharetra metus. Suspendisse lectus ex, volutpat vel accumsan efficitur, luctus vel tellus.</p>
+		</div>
+		</div>
 		</p>
+		</div>
 		<!--teacher-->
 		<!--teacher-->
 		<!--teacher-->
@@ -125,9 +178,23 @@
 <%= link_to "ログイン", "/login", class:"btne" , :style => "margin:0 20px 0 0;" %>
 <!--未ログインの場合に-->
 
+</div>
 
 
 
 <% end %>
 
 </div>
+<!-- <script>
+function openNav() {
+    document.getElementById("mySidenavi").style.width = "250px";
+    document.getElementById("main-with-nav").style.marginLeft = "250px";
+    document.body.style.backgroundColor = "rgba(0,0,0,0.4)";
+}
+
+function closeNav() {
+    document.getElementById("mySidenavi").style.width = "0";
+    document.getElementById("main-with-nav").style.marginLeft= "0";
+    document.body.style.backgroundColor = "white";
+}
+</script> -->
