i removed the side nav html for the mean time

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,36 +5,6 @@
     %>
 </div>
 
-<style>
-.sidenavi {
-    height: 100%;
-    width: 200px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #111;
-    overflow-x: hidden;
-    padding-top: 20px;
-}
-
-.sidenavi a {
-    padding: 6px 6px 6px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-}
-
-.sidenavi a:hover {
-    color: #f1f1f1;
-}
-
-@media screen and (max-height: 450px) {
-  .sidenavi {padding-top: 15px;}
-  .sidenavi a {font-size: 18px;}
-}
-</style>
 <div style="background: url('bg.jpg'); padding-bottom: 30px;">
 
 <% if logged_in? %>
@@ -112,15 +82,9 @@
 		<!--teacher-->
 		<!--teacher-->
 		<!--teacher-->
-			<div class="sidenavi">
-			  <a href="#">About</a>
-			  <a href="#">Services</a>
-			  <a href="#">Clients</a>
-			  <a href="#">Contact</a>
-			</div>
 		<p>
 		<br/>
-		<div class="container" style="padding:0 3% 0 3%; margin-left: 200px; position: relative;">
+		<div class="container" style="padding:0 3% 0 3%;>
 		<div class ="row">
 			<div class = "col-sm-6"><p>
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi leo, tincidunt vel malesuada et, auctor eu est. Vivamus dapibus efficitur efficitur. Integer tempus consequat bibendum. Nam suscipit, augue in convallis blandit, odio metus sagittis neque, vel aliquet tellus neque accumsan libero. Pellentesque id consequat diam, ut tempus purus. Nam erat nisl, commodo interdum convallis at, tincidunt id justo. Vestibulum rhoncus vitae urna ac euismod. Sed sit amet pellentesque ipsum, nec pulvinar nisl. Duis tortor arcu, auctor nec felis vitae, cursus congue magna. Suspendisse a est viverra, semper tortor eu, luctus nisl.</p>
