unused and html codes was removed.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -36,7 +36,7 @@ a {
 </style>
 
 
-<div class="container-fluid" style="border-bottom: 1px solid #ccc; margin-left: 200px; position: relative;">
+<div class="container-fluid" style="border-bottom: 1px solid #ccc;">
 	<div class="row">
 		<div class="col-md-offset-1 col-md-3 col-xs-6" style="margin-top: 30px; margin-left: auto; margin-right: auto;">
  		<a href="/">
