--- a/app/views/contact_form/new.html.erb
+++ b/app/views/contact_form/new.html.erb
@@ -34,6 +34,10 @@
  .main-center {
   padding: 10px 10px !important;
  }
+
+ .qrcode {
+  margin-left: 0 !important;
+ }
 } 
 
 .bg {
@@ -126,8 +130,9 @@ span.input-group-addon i {
     <div class="container nopadding">
       <div class="row main">
         <div class="col-md-12">
-        <div class="main-login main-center col-md-offset-3 col-md-6">
-        <img src="timee-logo.jpg" class="img img-responsive" style="width: 100px; float: left;margin-top: 35px; margin-bottom: 10px; ">
+        <div class="main-login main-center col-md-5">
+          <a href="/">
+        <img src="timee-logo.jpg" class="img img-responsive" style="width: 100px; float: left;margin-top: 35px; margin-bottom: 10px; "></a>
         <h5 class="text-right hidden-xs">Contact Us</h5>
 
         <%= form_for(@contact_form, url: new_message_url) do |f| %>
@@ -167,15 +172,20 @@ span.input-group-addon i {
                 </div>
               </div>
          </div>
-         <div class="form-group">
-          <p>You can call us directly through our <a href="#"><strong><font color="green">Line</font></strong></a> account.</p><p>Scan the QR code:</p><br/>
-          <img src="../../qrline.png" alt="image here" height="300" width="300" style="max-width: 100%">
-         </div>
+
          <div class="form-group">
           <input type="submit" class="btn btn-primary btn-block btn-sm" value="送信">
-            </div>
+         </div>
           <% end %>
         </div>
+
+        <div class="main-login main-center col-md-6 text-center qrcode" style="margin-left: 40px;">
+         <div class="form-group">
+          <p>Scan the LINE QR code:</p>
+          <img src="../../qrline.png" alt="image here" height="300" width="300" style="max-width: 100%">
+          <p></p>
+         </div>
+       </div>
       </div>
     </div>
   </div>
