clickable image for checkbox.

--- a/app/views/users/endenter.html.erb
+++ b/app/views/users/endenter.html.erb
@@ -47,22 +47,22 @@
       <strong><h4 style="margin-top: -35px;">どの授業を受けますか？</h4></strong><hr>
       <div class="row">
         <div class="col-md-4"><p>
-        <img src="../../travel_english.png" class="small-icons"><span style="font-size:15px;"><br/><p class="small-topic-text"><label><input type="checkbox" name = "travel_english">&nbsp 旅行英会話</a></span></p></span></label>
+        <label for="travel_english"><img src="../../travel_english.png" class="small-icons"><span style="font-size:15px;"><br/><p class="small-topic-text"><input type="checkbox" id="travel_english" name = "travel_english">&nbsp 旅行英会話</a></span></p></span></label>
         </div>
         <div class="col-md-4"><p>
-        <img src="../../idiomatic_expressions.png" class="small-icons"><span><br/><p class="small-topic-text"><label style="font-size:12px;"><input type="checkbox" name = "travel_english">&nbsp 単語/熟語/フレーズ</a></span></p></label>
+        <label for="idiomatic_expressions" style="font-size:12px;"><img src="../../idiomatic_expressions.png" class="small-icons"><span><br/><p class="small-topic-text" style="font-size: 13px;"><input type="checkbox" id="idiomatic_expressions" name = "idiomatic_expressions">&nbsp 単語/熟語/フレーズ</a></span></p></label>
         </div>
         <div class="col-md-4"><p>
-        <img src="../../business_english.png" class="small-icons"><span style="font-size:15px;"><br/><p class="small-topic-text"><label><input type="checkbox" name = "travel_english">&nbsp ビジネス英語</a></span></p></label>
+        <label for="business_english"><img src="../../business_english.png" class="small-icons"><span style="font-size:15px;"><br/><p class="small-topic-text"><input type="checkbox" id="business_english" name = "business_english">&nbsp ビジネス英語</a></span></p></label>
         </div>
       </div>
        <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-4"><p>
-        <img src="../../daily_english.png" class="small-icons"><span style="font-size:15px;"><br/><p class="small-topic-text"><label><input type="checkbox" name = "travel_english">&nbsp 日常英会話</a></span></p></label>
+        <label for="daily_english"><img src="../../daily_english.png" class="small-icons"><span style="font-size:15px;"><br/><p class="small-topic-text"><input type="checkbox" id="daily_english" name = "daily_english">&nbsp 日常英会話</a></span></p></label>
         </div>
         <div class="col-md-4"><p>
-          <img src="../../role_playing.png" class="small-icons"><span style="font-size:15px;"><br/><p class="small-topic-text"><label><input type="checkbox" name = "travel_english">&nbsp なりきり英会話</a></span></p></label>
+          <label for="role_playing"><img src="../../role_playing.png" class="small-icons"><span style="font-size:15px;"><br/><p class="small-topic-text"><input type="checkbox" id="role_playing" name = "role_playing">&nbsp なりきり英会話</a></span></p></label>
         </div>
         <div class="col-md-2"></div>
       </div>
